Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Technology_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Technology_Type__c</fullName>
    <description>Used to select technology type for products. Perk-75</description>
    <label>Technology Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>Autosampler</fullName>
            </value>
            <value>
                <fullName>CAP injector</fullName>
            </value>
            <value>
                <fullName>Chromatography</fullName>
            </value>
            <value>
                <fullName>Falling Number</fullName>
            </value>
            <value>
                <fullName>Gas Chromatography GC</fullName>
            </value>
            <value>
                <fullName>Gas Chromatography/Mass Spectrometry</fullName>
            </value>
            <value>
                <fullName>ICP-MS</fullName>
            </value>
            <value>
                <fullName>ICP-OES</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>Liquid Chromatography LC</fullName>
            </value>
            <value>
                <fullName>Multi-Quad ICP-MS for Cleanroom Applications</fullName>
            </value>
            <value>
                <fullName>Multi-Quad ICP-MS for Non-Cleanroom Applications</fullName>
            </value>
            <value>
                <fullName>NIR</fullName>
            </value>
            <value>
                <fullName>O-ring</fullName>
            </value>
            <value>
                <fullName>PSS injector</fullName>
            </value>
            <value>
                <fullName>TEA</fullName>
            </value>
            <value>
                <fullName>UV/VIS</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>LCM</fullName>
            </value>
            <value>
                <fullName>MAS</fullName>
            </value>
            <value>
                <fullName>UVS</fullName>
            </value>
            <value>
                <fullName>Sample Prep</fullName>
            </value>
            <value>
                <fullName>GC-MS</fullName>
            </value>
            <value>
                <fullName>LC-MS</fullName>
            </value>
            <value>
                <fullName>TGA</fullName>
            </value>
            <value>
                <fullName>Process NIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>