Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Testing_Time__c.field-meta.xml
<CustomField>
    <fullName>B2B_Testing_Time__c</fullName>
    <label>B2B Testing Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>