Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Type__c</fullName>
    <description>Used to select type for products. Perk-75</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>HS 16</fullName>
            </value>
            <value>
                <fullName>Model 1115</fullName>
            </value>
            <value>
                <fullName>Model 1116</fullName>
            </value>
            <value>
                <fullName>Model 1117</fullName>
            </value>
            <value>
                <fullName>Model 4087</fullName>
            </value>
            <value>
                <fullName>MS Certified</fullName>
            </value>
            <value>
                <fullName>Sample Preparation Block</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>