Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>B2B_Unit_Size__c</fullName>
    <label>Unit Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>