Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_UoM__c.field-meta.xml
<CustomField>
    <fullName>B2B_UoM__c</fullName>
    <label>UoM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BOX</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>KAR</fullName>
            </value>
            <value>
                <fullName>KIT</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>PAK</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>SET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>