Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Uptake_Rate__c.field-meta.xml
<CustomField>
    <fullName>B2B_Uptake_Rate__c</fullName>
    <label>Uptake Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>