Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Varies_By_3__c.field-meta.xml
<CustomField>
    <fullName>B2B_Varies_By_3__c</fullName>
    <label>Varies By 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>