Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Voltage__c.field-meta.xml
<CustomField>
    <fullName>B2B_Voltage__c</fullName>
    <label>Voltage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>