Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Volume__c.field-meta.xml
<CustomField>
    <fullName>B2B_Volume__c</fullName>
    <description>Used to select the volume for products. Perk-75</description>
    <label>Volume</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>