Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Wave_Length_Range__c.field-meta.xml
<CustomField>
    <fullName>B2B_Wave_Length_Range__c</fullName>
    <label>Wave Length Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>