Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Web_SKU_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Web_SKU_Name__c</fullName>
    <label>B2B Web SKU Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>