Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Weight__c.field-meta.xml
<CustomField>
    <fullName>B2B_Weight__c</fullName>
    <label>Weight</label>
    <length>255</length>
    <translateData>true</translateData>
    <type>Text</type>
</CustomField>