Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Well_Shape__c.field-meta.xml
<CustomField>
    <fullName>B2B_Well_Shape__c</fullName>
    <label>Well Shape</label>
    <length>255</length>
    <type>Text</type>
</CustomField>