Perkin-UAT/force-app/main/default/objects/Product2/fields/BD_Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>BD_Billing_Cycle__c</fullName>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>4 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>6 months Deferred 3 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>13 months</fullName>
            </value>
            <value>
                <fullName>15 months</fullName>
            </value>
            <value>
                <fullName>18 months</fullName>
            </value>
            <value>
                <fullName>24 months</fullName>
            </value>
            <value>
                <fullName>27 months</fullName>
            </value>
            <value>
                <fullName>48 months</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>