Perkin-UAT/force-app/main/default/objects/Product2/fields/BD_DChain_Spec_Status__c.field-meta.xml
<CustomField>
    <fullName>BD_DChain_Spec_Status__c</fullName>
    <label>DChain Spec Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>