Perkin-UAT/force-app/main/default/objects/Product2/fields/BD_Is_Special__c.field-meta.xml
<CustomField>
    <fullName>BD_Is_Special__c</fullName>
    <description>Used in CPQ Custom Action to exclude special products from the quote line editor</description>
    <formula>BEGINS ( Partnum__c , &quot;SPECIAL&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Special</label>
    <type>Checkbox</type>
</CustomField>