Perkin-UAT/force-app/main/default/objects/Product2/fields/BD_Item_Category_Group__c.field-meta.xml
<CustomField>
    <fullName>BD_Item_Category_Group__c</fullName>
    <label>Item Category Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>