Perkin-UAT/force-app/main/default/objects/Product2/fields/BD_Planned_Delivery_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>BD_Planned_Delivery_Time_Days__c</fullName>
    <label>Planned Delivery Time Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>