Perkin-UAT/force-app/main/default/objects/Product2/fields/Big_Machines_Prod_Desc__c.field-meta.xml
<CustomField>
    <fullName>Big_Machines_Prod_Desc__c</fullName>
    <label>Big Machines Prod Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>