Perkin-UAT/force-app/main/default/objects/Product2/fields/CPQ_Bundle_or_A_La_Carte__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Bundle_or_A_La_Carte__c</fullName>
    <description>Defines how products are filtered on the product selection screen.</description>
    <inlineHelpText>Defines how products are filtered on the product selection screen.</inlineHelpText>
    <label>Bundle or A La Carte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>A La Carte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>