Perkin-UAT/force-app/main/default/objects/Product2/fields/CPQ_Maintenance_Optional__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Maintenance_Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Prevents this product from triggering required approval if associated maintenance is removed</inlineHelpText>
    <label>Maintenance Optional</label>
    <type>Checkbox</type>
</CustomField>