Perkin-UAT/force-app/main/default/objects/Product2/fields/CPQ_Product_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Product_Hierarchy__c</fullName>
    <label>CPQ Product Hierarchy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>