Perkin-UAT/force-app/main/default/objects/Product2/fields/CPQ_Special__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Special__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special</label>
    <type>Checkbox</type>
</CustomField>