Perkin-UAT/force-app/main/default/objects/Product2/fields/Custom_Product__c.field-meta.xml
<CustomField>
    <fullName>Custom_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to define if this product  is a custom product .Set by Boomi Integration. (Source: S-695575 / S-692506)</description>
    <inlineHelpText>This field is used to define if this product  is a custom product .Set by Boomi Integration.</inlineHelpText>
    <label>Custom Product</label>
    <type>Checkbox</type>
</CustomField>