Perkin-UAT/force-app/main/default/objects/Product2/fields/Ext_Warranty_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Ext_Warranty_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if this product should be included in the calculation. (Source: S-695040)</description>
    <inlineHelpText>Defines if this product should be included in the calculation.</inlineHelpText>
    <label>Ext Warranty Calculation</label>
    <type>Checkbox</type>
</CustomField>