Perkin-UAT/force-app/main/default/objects/Product2/fields/FlagForUpdate__c.field-meta.xml
<CustomField>
    <fullName>FlagForUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FlagForUpdate</label>
    <type>Checkbox</type>
</CustomField>