Perkin-UAT/force-app/main/default/objects/Product2/fields/Food_Cross_Sell_Analytical__c.field-meta.xml
<CustomField>
    <fullName>Food_Cross_Sell_Analytical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food Cross Sell Analytical</label>
    <type>Checkbox</type>
</CustomField>