Perkin-UAT/force-app/main/default/objects/Product2/fields/fxAutoId__c.field-meta.xml
<CustomField>
    <fullName>fxAutoId__c</fullName>
    <description>Used to create record Row Id</description>
    <displayFormat>PROD-{000000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Used to create record Row Id</inlineHelpText>
    <label>fxAutoId</label>
    <type>AutoNumber</type>
</CustomField>