Perkin-UAT/force-app/main/default/objects/Product2/fields/fxCPQProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>fxCPQProductHierarchy__c</fullName>
    <description>This field is used to allow both informatics and commercial BU to group products CPQ search based on the different needs, by looking at the product type</description>
    <formula>IF(Platform_INF__c = &#39;INFSOFTWARE&#39;
  , CPQ_Product_Hierarchy__c
  ,  product_line__c 
   )</formula>
    <inlineHelpText>This field is used to allow both informatics and commercial BU to group products CPQ search based on the different needs, by looking at the product type</inlineHelpText>
    <label>fxCPQProductHierarchy</label>
    <type>Text</type>
</CustomField>