Perkin-UAT/force-app/main/default/objects/Product2/fields/IGOR_Description__c.field-meta.xml
<CustomField>
    <fullName>IGOR_Description__c</fullName>
    <label>IGOR_PAC Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>