Perkin-UAT/force-app/main/default/objects/Product2/fields/IGOR_Item_Class_Desc__c.field-meta.xml
<CustomField>
    <fullName>IGOR_Item_Class_Desc__c</fullName>
    <label>IGOR Item Class Desc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>