Perkin-UAT/force-app/main/default/objects/Product2/fields/In_SAP__c.field-meta.xml
<CustomField>
    <fullName>In_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to identify if a product is in SAP</description>
    <label>In SAP</label>
    <type>Checkbox</type>
</CustomField>