Perkin-UAT/force-app/main/default/objects/Product2/fields/INF_Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>INF_Pricing_Model__c</fullName>
    <label>Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Named User</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Instance</fullName>
            </value>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Personal Subscription</fullName>
            </value>
            <value>
                <fullName>Renewals Only</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>Study</fullName>
            </value>
            <value>
                <fullName>TIBCO Included</fullName>
            </value>
            <value>
                <fullName>TIBCO Not Included</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Concurrent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>