Perkin-UAT/force-app/main/default/objects/Product2/fields/INF_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>INF_Product_Family__c</fullName>
    <label>INF Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Attivio</fullName>
            </value>
            <value>
                <fullName>CBOE</fullName>
            </value>
            <value>
                <fullName>ChemDraw Cloud</fullName>
            </value>
            <value>
                <fullName>ChemDraw Prime</fullName>
            </value>
            <value>
                <fullName>ChemDraw Professional</fullName>
            </value>
            <value>
                <fullName>ChemOffice</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Elements</fullName>
            </value>
            <value>
                <fullName>E-Notebook</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>High Content Profiler</fullName>
            </value>
            <value>
                <fullName>iLab</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>InfomatiX</fullName>
            </value>
            <value>
                <fullName>Lead Discovery Biologics</fullName>
            </value>
            <value>
                <fullName>Lead Discovery Research</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>QAQC</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Scitara DLX</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Signals</fullName>
            </value>
            <value>
                <fullName>Signals Clinical</fullName>
            </value>
            <value>
                <fullName>Signals DLX</fullName>
            </value>
            <value>
                <fullName>Signals Lead Discovery</fullName>
            </value>
            <value>
                <fullName>Signals Notebook</fullName>
            </value>
            <value>
                <fullName>Signals Screening</fullName>
            </value>
            <value>
                <fullName>Signals Suite Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>