Perkin-UAT/force-app/main/default/objects/Product2/fields/INF_Split__c.field-meta.xml
<CustomField>
    <fullName>INF_Split__c</fullName>
    <label>Split</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>