Perkin-UAT/force-app/main/default/objects/Product2/fields/Installation_Training_Price__c.field-meta.xml
<CustomField>
    <fullName>Installation_Training_Price__c</fullName>
    <description>Field created for BigMachines Implementation as part of Caliper migration.</description>
    <label>Installation Training Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>