Perkin-UAT/force-app/main/default/objects/Product2/fields/Is_B2B_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_B2B_Product__c</fullName>
    <formula>NOT(ISNULL( B2B_Sales_Org_And_Sales_Status__c ))</formula>
    <label>Is B2B Product?</label>
    <type>Checkbox</type>
</CustomField>